--- a/Lizzie/Base.lproj/Main.storyboard
+++ b/Lizzie/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XhB-HF-MDQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K4m-UN-kIQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -280,16 +280,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xmk-99-zLM">
-                                <rect key="frame" x="164.5" y="575" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="sendBioSnapshot:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vyf-VQ-WOo"/>
-                                </connections>
-                            </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="52" translatesAutoresizingMaskIntoConstraints="NO" id="pS6-JN-u5o">
-                                <rect key="frame" x="0.0" y="36" width="375" height="558"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pS6-JN-u5o">
+                                <rect key="frame" x="0.0" y="36" width="375" height="562"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="hcH-BK-DEQ">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="75.5"/>
@@ -308,17 +300,17 @@
                                             </textField>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="N7K-nA-gcy" secondAttribute="trailing" constant="20" id="5Iu-ZO-bgg"/>
-                                            <constraint firstAttribute="trailing" secondItem="4q5-Up-v2l" secondAttribute="trailing" constant="20" id="Btp-Xp-OKJ"/>
-                                            <constraint firstItem="4q5-Up-v2l" firstAttribute="leading" secondItem="hcH-BK-DEQ" secondAttribute="leading" constant="20" id="nBr-vW-J2B"/>
-                                            <constraint firstItem="N7K-nA-gcy" firstAttribute="leading" secondItem="hcH-BK-DEQ" secondAttribute="leading" constant="20" id="oU4-68-n2U"/>
+                                            <constraint firstItem="N7K-nA-gcy" firstAttribute="leading" secondItem="hcH-BK-DEQ" secondAttribute="leading" constant="20" id="8a2-fj-bOZ"/>
+                                            <constraint firstAttribute="trailing" secondItem="N7K-nA-gcy" secondAttribute="trailing" constant="20" id="aS9-Qm-pBJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="4q5-Up-v2l" secondAttribute="trailing" constant="20" id="llR-3c-5EZ"/>
+                                            <constraint firstItem="4q5-Up-v2l" firstAttribute="leading" secondItem="hcH-BK-DEQ" secondAttribute="leading" constant="20" id="sOo-WC-PvK"/>
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="F6O-EB-sVL">
-                                        <rect key="frame" x="0.0" y="127.5" width="375" height="66.5"/>
+                                        <rect key="frame" x="0.0" y="85.5" width="375" height="66.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="egH-qb-5gY">
-                                                <rect key="frame" x="166.5" y="0.0" width="42" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="egH-qb-5gY">
+                                                <rect key="frame" x="20" y="0.0" width="335" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -331,28 +323,47 @@
                                             </slider>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="Nzq-VO-Ng8" secondAttribute="trailing" constant="20" id="9YP-KS-VMa"/>
-                                            <constraint firstItem="Nzq-VO-Ng8" firstAttribute="leading" secondItem="F6O-EB-sVL" secondAttribute="leading" constant="20" id="siH-32-TQb"/>
+                                            <constraint firstAttribute="trailing" secondItem="egH-qb-5gY" secondAttribute="trailing" constant="20" id="8Ha-Ew-7in"/>
+                                            <constraint firstItem="egH-qb-5gY" firstAttribute="leading" secondItem="F6O-EB-sVL" secondAttribute="leading" constant="20" id="HDt-Y4-zjT"/>
+                                            <constraint firstItem="Nzq-VO-Ng8" firstAttribute="leading" secondItem="F6O-EB-sVL" secondAttribute="leading" constant="20" id="nGk-of-uYd"/>
+                                            <constraint firstAttribute="trailing" secondItem="Nzq-VO-Ng8" secondAttribute="trailing" constant="20" id="xOX-3I-aSr"/>
                                         </constraints>
                                     </stackView>
                                     <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QWu-G5-gRf" customClass="LineChartView" customModule="Charts">
-                                        <rect key="frame" x="10" y="246" width="355" height="150"/>
+                                        <rect key="frame" x="10" y="162" width="355" height="150"/>
                                         <color key="backgroundColor" red="1" green="0.72469553313764035" blue="0.75450649487102506" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="kOb-B6-Xlc" customClass="EmotionButtonsControl" customModule="Lizzie" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="448" width="355" height="110"/>
+                                        <rect key="frame" x="10" y="322" width="355" height="50"/>
                                     </stackView>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" text="comments?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HSJ-Vm-MaH">
+                                        <rect key="frame" x="18" y="382" width="339" height="140"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xmk-99-zLM">
+                                        <rect key="frame" x="164.5" y="532" width="46" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="sendBioSnapshot:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vyf-VQ-WOo"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="hcH-BK-DEQ" secondAttribute="trailing" id="8HK-O9-ZNl"/>
-                                    <constraint firstItem="hcH-BK-DEQ" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" id="RGd-lA-dPT"/>
+                                    <constraint firstAttribute="trailing" secondItem="hcH-BK-DEQ" secondAttribute="trailing" id="9k7-MR-1Ht"/>
+                                    <constraint firstAttribute="trailing" secondItem="hcH-BK-DEQ" secondAttribute="trailing" id="OYj-sj-Rfi"/>
+                                    <constraint firstItem="hcH-BK-DEQ" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" id="a0v-It-FHw"/>
+                                    <constraint firstItem="hcH-BK-DEQ" firstAttribute="top" secondItem="pS6-JN-u5o" secondAttribute="top" id="pZF-bW-oJT"/>
+                                    <constraint firstItem="hcH-BK-DEQ" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" id="tLR-de-FOn"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.76078431372549016" green="0.82352941176470584" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="pS6-JN-u5o" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4zg-5s-Ia0"/>
-                            <constraint firstAttribute="trailing" secondItem="pS6-JN-u5o" secondAttribute="trailing" id="Z25-on-OwB"/>
+                            <constraint firstItem="pS6-JN-u5o" firstAttribute="leading" secondItem="5d9-BZ-wbb" secondAttribute="leading" id="Oer-Xh-0lg"/>
+                            <constraint firstItem="pS6-JN-u5o" firstAttribute="top" secondItem="5d9-BZ-wbb" secondAttribute="top" constant="10" id="X8n-Ye-7yW"/>
+                            <constraint firstItem="5d9-BZ-wbb" firstAttribute="trailing" secondItem="pS6-JN-u5o" secondAttribute="trailing" id="jfE-S9-tOV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5d9-BZ-wbb"/>
                     </view>
