--- a/Lizzie/Base.lproj/Main.storyboard
+++ b/Lizzie/Base.lproj/Main.storyboard
@@ -277,8 +277,9 @@
                         <outlet property="markEventCntPhone" destination="fuL-Sf-yHb" id="m0d-uL-gkY"/>
                         <outlet property="markEventTable" destination="znv-Ic-zB8" id="yIe-7Q-rke"/>
                         <outlet property="syncToPhoneStateLabel" destination="QqO-ej-EvB" id="ePL-8o-D3L"/>
-                        <segue destination="BYZ-38-t0r" kind="show" id="yFN-UM-AvG"/>
+                        <outlet property="uploadBioSamplesButton" destination="Zcp-2Y-h56" id="HOW-bb-tVO"/>
                         <segue destination="XhB-HF-MDQ" kind="show" identifier="evalEmotionSegue" id="1aJ-Js-cxB"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="contextualizeMarkEventSegue" id="KNi-qL-eYn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TbP-Gt-apH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -294,23 +295,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pS6-JN-u5o">
-                                <rect key="frame" x="0.0" y="36" width="375" height="562"/>
+                                <rect key="frame" x="0.0" y="36" width="375" height="556"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" translatesAutoresizingMaskIntoConstraints="NO" id="aKz-2l-hid">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OyT-GX-x6S">
-                                                <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="326" height="30"/>
                                                 <state key="normal" title="   Back"/>
+                                                <connections>
+                                                    <action selector="goBackToOneButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WgY-jz-3wT"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xmk-99-zLM">
-                                                <rect key="frame" x="46" y="0.0" width="329" height="30"/>
+                                                <rect key="frame" x="326" y="0.0" width="49" height="30"/>
                                                 <state key="normal" title="Upload"/>
                                                 <connections>
                                                     <action selector="sendBioSnapshot:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vyf-VQ-WOo"/>
                                                 </connections>
                                             </button>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="OyT-GX-x6S" firstAttribute="leading" secondItem="aKz-2l-hid" secondAttribute="leading" id="XIw-jc-7ha"/>
+                                        </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="hcH-BK-DEQ">
                                         <rect key="frame" x="0.0" y="40" width="375" height="75.5"/>
@@ -336,49 +343,48 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="F6O-EB-sVL">
-                                        <rect key="frame" x="0.0" y="125.5" width="375" height="66.5"/>
+                                        <rect key="frame" x="146.5" y="125.5" width="82" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="egH-qb-5gY">
-                                                <rect key="frame" x="20" y="0.0" width="335" height="20.5"/>
+                                                <rect key="frame" x="20" y="0.0" width="42" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Nzq-VO-Ng8">
-                                                <rect key="frame" x="18" y="36.5" width="339" height="31"/>
-                                                <connections>
-                                                    <action selector="eventDurationSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="cWU-Qs-jBS"/>
-                                                </connections>
-                                            </slider>
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="egH-qb-5gY" secondAttribute="trailing" constant="20" id="8Ha-Ew-7in"/>
                                             <constraint firstItem="egH-qb-5gY" firstAttribute="leading" secondItem="F6O-EB-sVL" secondAttribute="leading" constant="20" id="HDt-Y4-zjT"/>
-                                            <constraint firstItem="Nzq-VO-Ng8" firstAttribute="leading" secondItem="F6O-EB-sVL" secondAttribute="leading" constant="20" id="nGk-of-uYd"/>
-                                            <constraint firstAttribute="trailing" secondItem="Nzq-VO-Ng8" secondAttribute="trailing" constant="20" id="xOX-3I-aSr"/>
                                         </constraints>
                                     </stackView>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="zoF-KU-7vC">
+                                        <rect key="frame" x="18" y="156" width="339" height="31"/>
+                                        <connections>
+                                            <action selector="eventDurationSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="cJo-eB-U1S"/>
+                                        </connections>
+                                    </slider>
                                     <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QWu-G5-gRf" customClass="LineChartView" customModule="Charts">
-                                        <rect key="frame" x="10" y="202" width="355" height="150"/>
+                                        <rect key="frame" x="10" y="196" width="355" height="150"/>
                                         <color key="backgroundColor" red="1" green="0.72469553313764035" blue="0.75450649487102506" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="kOb-B6-Xlc" customClass="EmotionButtonsControl" customModule="Lizzie" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="362" width="355" height="50"/>
+                                        <rect key="frame" x="10" y="356" width="355" height="50"/>
                                     </stackView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" text="comments?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HSJ-Vm-MaH">
-                                        <rect key="frame" x="18" y="422" width="339" height="140"/>
+                                        <rect key="frame" x="18" y="416" width="339" height="140"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="zoF-KU-7vC" secondAttribute="trailing" constant="20" id="1Ps-fG-I6u"/>
+                                    <constraint firstItem="zoF-KU-7vC" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" constant="20" id="3xF-aS-Ube"/>
                                     <constraint firstAttribute="trailing" secondItem="aKz-2l-hid" secondAttribute="trailing" id="9S5-OX-wFp"/>
                                     <constraint firstAttribute="trailing" secondItem="hcH-BK-DEQ" secondAttribute="trailing" id="9k7-MR-1Ht"/>
                                     <constraint firstAttribute="trailing" secondItem="hcH-BK-DEQ" secondAttribute="trailing" id="OYj-sj-Rfi"/>
                                     <constraint firstItem="hcH-BK-DEQ" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" id="a0v-It-FHw"/>
                                     <constraint firstItem="aKz-2l-hid" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" id="fuj-5H-tCd"/>
-                                    <constraint firstItem="hcH-BK-DEQ" firstAttribute="top" secondItem="pS6-JN-u5o" secondAttribute="top" id="pZF-bW-oJT"/>
                                     <constraint firstItem="hcH-BK-DEQ" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" id="tLR-de-FOn"/>
                                 </constraints>
                             </stackView>
@@ -392,14 +398,16 @@
                         <viewLayoutGuide key="safeArea" id="5d9-BZ-wbb"/>
                     </view>
                     <connections>
-                        <outlet property="eventDurationSlider" destination="Nzq-VO-Ng8" id="PIh-bG-Kqi"/>
+                        <outlet property="eventDurationSlider" destination="zoF-KU-7vC" id="sWX-uN-vHj"/>
                         <outlet property="eventDurationTextLabel" destination="egH-qb-5gY" id="gn0-Bx-Zfo"/>
                         <outlet property="eventTextField" destination="N7K-nA-gcy" id="mwl-FC-srO"/>
                         <outlet property="eventTextLabel" destination="4q5-Up-v2l" id="vO3-lO-4OH"/>
                         <outlet property="heartrateChart" destination="QWu-G5-gRf" id="uqe-E7-8hp"/>
+                        <segue destination="trF-OB-Kz1" kind="unwind" identifier="unwindSegue2ToMainViewController" unwindAction="unwindEmotionViewWithSegue:" id="MVC-zg-mi5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="trF-OB-Kz1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="24.800000000000001" y="34.632683658170919"/>
         </scene>
